# xodds

./: .gitignore  Anchor.toml  CLAUDE.md  CONTEXT.md  DEMO.md  DESIGN.md  PRODUCT.md  README.md  brand.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: keeper.yml
.superpowers/sdd/: progress.md
app/: .env.example  .gitignore  README.md  legacy.css  next.config.mjs  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: AddFriendModal.tsx  Avatars.tsx  CreatePool.tsx  CreatePoolModal.tsx  DepositModal.tsx  Feed.tsx  GameBrowser.tsx  GetTestFunds.tsx  GroupBar.tsx  GroupRail.tsx  InviteModal.tsx  Leaderboard.tsx  MarketSection.tsx  MatchBanner.tsx  (+15 more)
keeper/: README.md  decide.ts  e2e-devnet.ts  index.ts  keeper.ts  merkle.ts  probe-odds.ts  probe-snapshot.ts  publish-roots.ts  subscribe-txline.ts  txline-live.ts  txline.ts
plans/: 001-proof-receipt-reveal.md  README.md
programs/finalwhistle/: Cargo.toml
programs/finalwhistle/src/: lib.rs
programs/txline_mock/: Cargo.toml
programs/txline_mock/src/: lib.rs
supabase/: setup.sql
tests/: claim.test.ts  corners-cards.test.ts  errors.test.ts  feed-merge.test.ts  fixtures-seen.test.ts  handicap.test.ts  helpers.test.ts  keeper.test.ts  leaderboard.test.ts  lock.test.ts  markets.test.ts  open-market.test.ts  pool.test.ts  proof-client.test.ts  receipt.test.ts  settle.test.ts  smoke.test.ts  time-until.test.ts  totalgoals.test.ts  txline-app.test.ts  txline-live.test.ts  txline.test.ts  void.test.ts
(+75 files in other folders)
