[package]
name = "txline_mock"
version = "0.1.0"
description = "Mock TxLINE scores publisher — stands in for TxLINE's daily_scores_roots on devnet"
edition = "2021"
rust-version = "1.79.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "txline_mock"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
